# STM32F1_edge_BME280

./: .gitignore  Cargo.toml  README.md  README.rst  Untitled.ipynb  weather_random.ipynb
.ipynb_checkpoints/: weather_random-checkpoint.ipynb
src/: main.rs
